# IJC_Soliter

./: CMakeLists.txt  Card.cpp  Card.h  CardDeck.cpp  CardDeck.h  CardStack.cpp  CardStack.h  Color.h  ConsoleView.cpp  ConsoleView.h  Controller.cpp  Controller.h  ControllerAbstractClass.h  Doxyfile  Game.cpp  Game.h  Help.cpp  Help.h  History.cpp  History.h  IJC_Solitaire.pro  README.md  TargetStack.cpp  TargetStack.h  ViewAbstractClass.cpp  ViewAbstractClass.h  WorkingPack.cpp  WorkingPack.h  cardview.cpp  cardview.h  cardview.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moj_main.cpp  tableview.cpp  tableview.h  tableview.ui
Controller/: Game.cpp  Game.h
cardpack/: Card.cpp  Card.h
controller/: Controller.cpp  Controller.h
game/: Game.cpp  Game.h  Help.cpp  Help.h  History.cpp  History.h
model/: Card.cpp  Card.h  CardDeck.cpp  CardDeck.h  CardStack.cpp  CardStack.h  Color.h  TargetStack.cpp  TargetStack.h  WorkingPack.cpp  WorkingPack.h
view/: ViewAbstractClass.h
